tests/baselines/reference/privateNamesConstructorChain-2.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesConstructorChain-2.ts(3,5): error TS18019: 'static' modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesConstructorChain-2.ts(6,15): error TS2339: Property '#bar' does not exist on type 'typeof Child'.


==== tests/cases/conformance/classes/members/privateNames/privateNamesConstructorChain-2.ts (2 errors) ====
    class Parent<T> {
        #foo = 3;
        static #bar = 5;
        ~~~~~~
!!! error TS18019: 'static' modifier cannot be used with a private identifier.
        accessChildProps() {
            new Child<string>().#foo; // OK (`#foo` was added when `Parent`'s constructor was called on `child`)
            Child.#bar;       // Error: not found
                  ~~~~
!!! error TS2339: Property '#bar' does not exist on type 'typeof Child'.
        }
    }
    
    class Child<T> extends Parent<T> {
        #foo = "foo";       // OK (Child's #foo does not conflict, as `Parent`'s `#foo` is not accessible)
        #bar = "bar";       // OK
    }
    
    new Parent<number>().accessChildProps();
    